// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Import Profile Select File Step > should change back from json to wwe 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Import Profile
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select a .json file with your Profile and related properties to start the import process.
        </div>
      </div>
    </div>
    <div
      class="relative mt-6 h-52 rounded-lg border-2 border-dashed border-theme-secondary-300 p-2 dark:border-theme-secondary-800 sm:mt-8"
      data-testid="SelectFile"
    >
      <div
        class="flex h-full flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
        data-testid="SelectFile__drop-zone"
      >
        <div
          class="css-1atxdzc"
          height="40"
          width="40"
        >
          <svg
            id="extension-json"
            viewBox="0 0 40 40"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M15 29v8a2 2 0 0 1-2 2h-2m12-10h-2.002a1.999 1.999 0 0 0-1.997 2c0 3 3.995 3 3.995 6 0 1.105-.894 2-1.998 2H19m10-10c-1.104 0-1.999.899-2 2.009v6.021A2.005 2.005 0 0 0 29.039 39 2.005 2.005 0 0 0 31 37.03v-6.025A2.004 2.004 0 0 0 29 29zm6 10V29l4 10V29"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
              fill="none"
              stroke="#289548"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="mt-8"
        >
          <span
            class="mr-px hidden font-semibold sm:inline"
          >
            Drag & Drop or

          </span>
          <button
            class="link ring-focus relative cursor-pointer font-semibold focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="SelectFile__browse-files"
            title="Click here to upload"
            type="button"
          >
            Browse Files
          </button>
        </div>
        <div
          class="mt-2 text-sm font-semibold text-theme-secondary-500"
        >
          Supported format is .json
        </div>
      </div>
    </div>
    <div
      class="mt-6"
    >
      <div
        class="flex flex-col overflow-hidden rounded-xl"
      >
        <div
          class="css-rzhg83"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
          <span>
            Warning
          </span>
        </div>
        <div
          class="css-trjt6n"
        >
          Please note that importing a Profile from Desktop Wallet v2 in .json format is supported temporarily and will soon be disabled. We recommend that you re-save your Profile in the new .wwe format.
        </div>
      </div>
    </div>
    <div
      class="css-j6ajdm"
    >
      <button
        class="css-6419sw"
        data-testid="SelectFileStep__back"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Back
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Import Profile Select File Step > should handle back event 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Import Profile
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select a .wwe file with your Profile and related properties to start the import process.
        </div>
      </div>
    </div>
    <div
      class="relative mt-6 h-52 rounded-lg border-2 border-dashed border-theme-secondary-300 p-2 dark:border-theme-secondary-800 sm:mt-8"
      data-testid="SelectFile"
    >
      <div
        class="flex h-full flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
        data-testid="SelectFile__drop-zone"
      >
        <div
          class="css-1atxdzc"
          height="40"
          width="40"
        >
          <svg
            id="extension-wwe"
            viewBox="0 0 40 40"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
              fill="none"
              stroke="#289548"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M22 29v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
              />
              <path
                d="M26 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.253 2-6.604V29m7 10h-2a2.002 2.002 0 0 1-2-2.001v-6A2 2 0 0 1 35 29h2m-4 6h4m-26-6v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
              />
              <path
                d="M15 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.254 2-6.604V29"
              />
            </g>
          </svg>
        </div>
        <div
          class="mt-8"
        >
          <span
            class="mr-px hidden font-semibold sm:inline"
          >
            Drag & Drop or

          </span>
          <button
            class="link ring-focus relative cursor-pointer font-semibold focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="SelectFile__browse-files"
            title="Click here to upload"
            type="button"
          >
            Browse Files
          </button>
        </div>
        <div
          class="mt-2 text-sm font-semibold text-theme-secondary-500"
        >
          Supported format is .wwe
        </div>
      </div>
    </div>
    <p
      class="mt-6 text-center text-base text-theme-secondary-text"
    >
      <span>
        Importing from Desktop Wallet v2?

      </span>
      <button
        class="link ring-focus relative cursor-pointer font-semibold focus:outline-none"
        data-ring-focus-margin="-m-1"
        data-testid="SelectFileStep__change-file"
        title="Click here."
        type="button"
      >
        Click here.
      </button>
    </p>
    <div
      class="css-j6ajdm"
    >
      <button
        class="css-6419sw"
        data-testid="SelectFileStep__back"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Back
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Import Profile Select File Step > should render file selection for wwe and switch to json 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Import Profile
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select a .wwe file with your Profile and related properties to start the import process.
        </div>
      </div>
    </div>
    <div
      class="relative mt-6 h-52 rounded-lg border-2 border-dashed border-theme-secondary-300 p-2 dark:border-theme-secondary-800 sm:mt-8"
      data-testid="SelectFile"
    >
      <div
        class="flex h-full flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
        data-testid="SelectFile__drop-zone"
      >
        <div
          class="css-1atxdzc"
          height="40"
          width="40"
        >
          <svg
            id="extension-wwe"
            viewBox="0 0 40 40"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
              fill="none"
              stroke="#289548"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M22 29v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
              />
              <path
                d="M26 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.253 2-6.604V29m7 10h-2a2.002 2.002 0 0 1-2-2.001v-6A2 2 0 0 1 35 29h2m-4 6h4m-26-6v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
              />
              <path
                d="M15 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.254 2-6.604V29"
              />
            </g>
          </svg>
        </div>
        <div
          class="mt-8"
        >
          <span
            class="mr-px hidden font-semibold sm:inline"
          >
            Drag & Drop or

          </span>
          <button
            class="link ring-focus relative cursor-pointer font-semibold focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="SelectFile__browse-files"
            title="Click here to upload"
            type="button"
          >
            Browse Files
          </button>
        </div>
        <div
          class="mt-2 text-sm font-semibold text-theme-secondary-500"
        >
          Supported format is .wwe
        </div>
      </div>
    </div>
    <p
      class="mt-6 text-center text-base text-theme-secondary-text"
    >
      <span>
        Importing from Desktop Wallet v2?

      </span>
      <button
        class="link ring-focus relative cursor-pointer font-semibold focus:outline-none"
        data-ring-focus-margin="-m-1"
        data-testid="SelectFileStep__change-file"
        title="Click here."
        type="button"
      >
        Click here.
      </button>
    </p>
    <div
      class="css-j6ajdm"
    >
      <button
        class="css-6419sw"
        data-testid="SelectFileStep__back"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Back
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Import Profile Select File Step > should render with json fileFormat selected 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Import Profile
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select a .json file with your Profile and related properties to start the import process.
        </div>
      </div>
    </div>
    <div
      class="relative mt-6 h-52 rounded-lg border-2 border-dashed border-theme-secondary-300 p-2 dark:border-theme-secondary-800 sm:mt-8"
      data-testid="SelectFile"
    >
      <div
        class="flex h-full flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
        data-testid="SelectFile__drop-zone"
      >
        <div
          class="css-1atxdzc"
          height="40"
          width="40"
        >
          <svg
            id="extension-json"
            viewBox="0 0 40 40"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M15 29v8a2 2 0 0 1-2 2h-2m12-10h-2.002a1.999 1.999 0 0 0-1.997 2c0 3 3.995 3 3.995 6 0 1.105-.894 2-1.998 2H19m10-10c-1.104 0-1.999.899-2 2.009v6.021A2.005 2.005 0 0 0 29.039 39 2.005 2.005 0 0 0 31 37.03v-6.025A2.004 2.004 0 0 0 29 29zm6 10V29l4 10V29"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <path
              d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
              fill="none"
              stroke="#289548"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="mt-8"
        >
          <span
            class="mr-px hidden font-semibold sm:inline"
          >
            Drag & Drop or

          </span>
          <button
            class="link ring-focus relative cursor-pointer font-semibold focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="SelectFile__browse-files"
            title="Click here to upload"
            type="button"
          >
            Browse Files
          </button>
        </div>
        <div
          class="mt-2 text-sm font-semibold text-theme-secondary-500"
        >
          Supported format is .json
        </div>
      </div>
    </div>
    <div
      class="mt-6"
    >
      <div
        class="flex flex-col overflow-hidden rounded-xl"
      >
        <div
          class="css-rzhg83"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
          <span>
            Warning
          </span>
        </div>
        <div
          class="css-trjt6n"
        >
          Please note that importing a Profile from Desktop Wallet v2 in .json format is supported temporarily and will soon be disabled. We recommend that you re-save your Profile in the new .wwe format.
        </div>
      </div>
    </div>
    <div
      class="css-j6ajdm"
    >
      <button
        class="css-6419sw"
        data-testid="SelectFileStep__back"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Back
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Import Profile Select File Step > should render with wwe fileFormat selected 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            Import Profile
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select a .wwe file with your Profile and related properties to start the import process.
        </div>
      </div>
    </div>
    <div
      class="relative mt-6 h-52 rounded-lg border-2 border-dashed border-theme-secondary-300 p-2 dark:border-theme-secondary-800 sm:mt-8"
      data-testid="SelectFile"
    >
      <div
        class="flex h-full flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
        data-testid="SelectFile__drop-zone"
      >
        <div
          class="css-1atxdzc"
          height="40"
          width="40"
        >
          <svg
            id="extension-wwe"
            viewBox="0 0 40 40"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
              fill="none"
              stroke="#289548"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <path
                d="M22 29v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
              />
              <path
                d="M26 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.253 2-6.604V29m7 10h-2a2.002 2.002 0 0 1-2-2.001v-6A2 2 0 0 1 35 29h2m-4 6h4m-26-6v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
              />
              <path
                d="M15 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.254 2-6.604V29"
              />
            </g>
          </svg>
        </div>
        <div
          class="mt-8"
        >
          <span
            class="mr-px hidden font-semibold sm:inline"
          >
            Drag & Drop or

          </span>
          <button
            class="link ring-focus relative cursor-pointer font-semibold focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="SelectFile__browse-files"
            title="Click here to upload"
            type="button"
          >
            Browse Files
          </button>
        </div>
        <div
          class="mt-2 text-sm font-semibold text-theme-secondary-500"
        >
          Supported format is .wwe
        </div>
      </div>
    </div>
    <p
      class="mt-6 text-center text-base text-theme-secondary-text"
    >
      <span>
        Importing from Desktop Wallet v2?

      </span>
      <button
        class="link ring-focus relative cursor-pointer font-semibold focus:outline-none"
        data-ring-focus-margin="-m-1"
        data-testid="SelectFileStep__change-file"
        title="Click here."
        type="button"
      >
        Click here.
      </button>
    </p>
    <div
      class="css-j6ajdm"
    >
      <button
        class="css-6419sw"
        data-testid="SelectFileStep__back"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Back
        </div>
      </button>
    </div>
  </div>
</div>
`;
